# deep-learning-from-scratch

./: .gitignore  pyproject.toml
ch03/: sig_step_compare.py  step_function.py
ch04/: gradient_2d.py  two_layer_net.py
ch06/: batch_norm_gradient_check.py  optimizer_compare_mnist.py  optimizer_compare_naive.py  overfit_weight_decay.py  weight_init_compare.py
ch08/: deep_convnet.py  half_float_network.py  misclassified_mnist.py
common/: layers.py  multi_layer_net.py  multi_layer_net_extend.py  optimizer.py
dataset/: mnist.py
