[tool.poetry]
name = "deep-learning-from-scratch"
version = "0.1.0"
description = ""
authors = ["Tomoya Yoshioka <tomoya.y@icloud.com>"]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.21.4"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
